Fix task 6